debug footer issues, realign social icons

--- a/ui/css/global-footer.css
+++ b/ui/css/global-footer.css
@@ -33,8 +33,7 @@
 
 
 .site-footer div {
-	padding-bottom: 2rem;
-	text-align: center
+	padding-bottom: 1rem;
 }
 
 .site-footer .new-facebook {
@@ -78,6 +77,11 @@
 	font-size: 1.2em;
 	line-height: 2.5rem;
 	margin-bottom: 7px;
+}
+
+.links-group.social li {
+	display: inline;
+	margin-right: 12px;
 }
 
 .links-group.social li > * {
@@ -212,6 +216,7 @@ footer .footer__menu {
 	margin: 0px;
 }
 
+
 .footer__menu li {
 	display: block;
 	clear: both;
@@ -224,6 +229,24 @@ footer .footer__menu {
 	border-bottom: solid 1px #696868;
 }
 
+footer ul {
+	padding: 0px;
+	list-style-type: none;
+	margin: 0px;
+}
+
+footer .footer__menu {
+	overflow: hidden;
+	padding: 0px;
+	margin: 0px;
+}
+
+.footer__menu li {
+	display: inline-block;
+	margin-left: 20px;
+	border-top: 0px;
+}
+
 @media (min-width: 768px) {
 	footer {
 		clear: both;
@@ -233,24 +256,6 @@ footer .footer__menu {
 		/*border-top: solid 1px #696868;
 		margin-top: 20px;*/
 		/*padding: 20px 0px;*/
-	}
-	
-	footer ul {
-		padding: 0px;
-		list-style-type: none;
-		margin: 0px;
-	}
-	
-	footer .footer__menu {
-		overflow: hidden;
-		padding: 0px;
-		margin: 0px;
-	}
-	
-	.footer__menu li {
-		display: inline-block;
-		margin-left: 20px;
-		border-top: 0px;
 	}
 	
 	.footer__menu li:last-child {
